# rust-seaorm-example

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml
migrations/: 20241021072957_user.up.sql
src/: main.rs
